# plate_validator

./: README.md  pyproject.toml
src/plate_validator_DaveWalker777/: __init__.py  validator.py
src/plate_validator_DaveWalker777.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
