[project]
name = "plate_validator_DaveWalker777"
version = "0.0.1"
authors = [
  { name="Dave Walker", email="davewalker777@yandex.ru" },
]
description = "Russian license plate validator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/plate_validator"
